fixed images + whole visibles

--- a/blocks/element/__button-heart/_active/element__button-heart_active.css
+++ b/blocks/element/__button-heart/_active/element__button-heart_active.css
@@ -1,7 +1,3 @@
 .element__button-heart_active{
-    background: url(../../../../images/HeartColorBlack.svg);
-    width: 24px;
-    height: 19px;
-    border: 0;
-    background-repeat: no-repeat;
+    background: url(../../../../images/HeartColorBlack.svg) no-repeat;
 }
