--- a/blocks/element/__button-heart/element__button-heart.css
+++ b/blocks/element/__button-heart/element__button-heart.css
@@ -1,4 +1,4 @@
-.element__button-hert{
+.element__button-heart{
     margin: 0;
     background: url(../../../images/Heart.svg);
     background-position: center;
@@ -9,7 +9,7 @@
     background-repeat: no-repeat;
 }
 
-.element__button-hert:hover{
+.element__button-heart:hover{
     opacity: 0.5;
     cursor: pointer;
 }
