--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -18,7 +18,7 @@
     .profile__add-button{
         width: 282px;
         height: 50px;
-        margin: 70px auto 0;
+        margin: 36px auto 0;
         background-size: 16px;
     }
 }
