--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -9,10 +9,13 @@
     font-weight: 400;
     font-size: 18px;
     line-height: 1.22;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 @media screen and (max-width: 1049px){
-    .proflile__profession{
+    .profile__subtitle{
         margin: 14px auto 0;
         text-align: center;
         max-width: 282px;
