--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -11,9 +11,6 @@
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
 }
 
 @media screen and (max-width: 1049px){ 
@@ -22,6 +19,6 @@
         font-size: 27px;
         line-height: 1.22;
         text-align: center;
-        margin: 26px 0 0 30px;
+        margin: 26px 0 0 46px;
     } 
 }
